--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -193,27 +193,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataSetAlmacen.Designer.cs">
+    <Compile Include="DBDataSetAlmacen.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>DataSetAlmacen.xsd</DependentUpon>
+      <DependentUpon>DBDataSetAlmacen.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="DBDataSetInvAlmacen.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBDataSetInvAlmacen.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="DBDataSetInvDespacho.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBDataSetInvDespacho.xsd</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Inventario.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Inventario.Designer.cs">
-      <DependentUpon>Inventario.cs</DependentUpon>
-    </Compile>
-    <Compile Include="inventarioDBDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>inventarioDBDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -230,17 +229,20 @@
       <DependentUpon>Solicitar.cs</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
-    <Compile Include="ViewReporAlmacen.cs">
+    <Compile Include="VerInventario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ViewReporAlmacen.Designer.cs">
-      <DependentUpon>ViewReporAlmacen.cs</DependentUpon>
+    <Compile Include="VerInventario.Designer.cs">
+      <DependentUpon>VerInventario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VerReporte.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VerReporte.Designer.cs">
+      <DependentUpon>VerReporte.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Inventario.resx">
-      <DependentUpon>Inventario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -255,36 +257,49 @@
     <EmbeddedResource Include="Registro.resx">
       <DependentUpon>Registro.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Report1.rdlc" />
     <EmbeddedResource Include="Reporte.rdlc" />
     <EmbeddedResource Include="ReportInventario.rdlc" />
     <EmbeddedResource Include="Solicitar.resx">
       <DependentUpon>Solicitar.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ViewReporAlmacen.resx">
-      <DependentUpon>ViewReporAlmacen.cs</DependentUpon>
+    <EmbeddedResource Include="VerInventario.resx">
+      <DependentUpon>VerInventario.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="DataSetAlmacen.xsc">
-      <DependentUpon>DataSetAlmacen.xsd</DependentUpon>
+    <EmbeddedResource Include="VerReporte.resx">
+      <DependentUpon>VerReporte.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="DBDataSetAlmacen.xsc">
+      <DependentUpon>DBDataSetAlmacen.xsd</DependentUpon>
     </None>
-    <None Include="DataSetAlmacen.xsd">
+    <None Include="DBDataSetAlmacen.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DataSetAlmacen.Designer.cs</LastGenOutput>
+      <LastGenOutput>DBDataSetAlmacen.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="DataSetAlmacen.xss">
-      <DependentUpon>DataSetAlmacen.xsd</DependentUpon>
+    <None Include="DBDataSetAlmacen.xss">
+      <DependentUpon>DBDataSetAlmacen.xsd</DependentUpon>
     </None>
-    <None Include="inventarioDBDataSet.xsc">
-      <DependentUpon>inventarioDBDataSet.xsd</DependentUpon>
+    <None Include="DBDataSetInvAlmacen.xsc">
+      <DependentUpon>DBDataSetInvAlmacen.xsd</DependentUpon>
     </None>
-    <None Include="inventarioDBDataSet.xsd">
+    <None Include="DBDataSetInvAlmacen.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>inventarioDBDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>DBDataSetInvAlmacen.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="inventarioDBDataSet.xss">
-      <DependentUpon>inventarioDBDataSet.xsd</DependentUpon>
+    <None Include="DBDataSetInvAlmacen.xss">
+      <DependentUpon>DBDataSetInvAlmacen.xsd</DependentUpon>
+    </None>
+    <None Include="DBDataSetInvDespacho.xsc">
+      <DependentUpon>DBDataSetInvDespacho.xsd</DependentUpon>
+    </None>
+    <None Include="DBDataSetInvDespacho.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DBDataSetInvDespacho.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DBDataSetInvDespacho.xss">
+      <DependentUpon>DBDataSetInvDespacho.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
