--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{E157BD4F-E986-4250-BB15-EB1E2BD4E82E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>WindowsFormsApp1</RootNamespace>
-    <AssemblyName>WindowsFormsApp1</AssemblyName>
+    <AssemblyName>S</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
