--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -25,7 +25,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>4</ApplicationRevision>
+    <ApplicationRevision>5</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -370,6 +370,8 @@
     <None Include="Resources\solicitar1.png" />
     <None Include="Resources\brack21.png" />
     <Content Include="control_panel_15486.ico" />
+    <None Include="Resources\UPDATE.ico" />
+    <None Include="Resources\CT.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
